@@ -10,6 +10,7 @@ V.Next
 - [MINOR] Automate broker protocol version computation. (#1301)
 - [MAJOR] New API on KeyAccessor (#1309)
 - [PATCH] Fixes deprecated PackageInfo.signatures and PackageManager.GET_SIGNATURES (#1256)
+- [MINOR] Adds a new API for signature verification and Package Validation(#1317)
 
 Version 3.3.1
 ----------
